@@ -1,10 +1,7 @@
 using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
-using Terraria.Audio;
 using Microsoft.Xna.Framework;
-
-using Spooky.Core;
 
 namespace Spooky.Content.NPCs.Catacomb.Layer2
 {
@@ -24,13 +21,15 @@ namespace Spooky.Content.NPCs.Catacomb.Layer2
             NPC.lifeMax = 5;
             NPC.damage = 0;
             NPC.defense = 0;
-            NPC.width = 44;
-            NPC.height = 10;
-            NPC.knockBackResist = 0f;
+			NPC.width = 88;
+			NPC.height = 16;
+			NPC.knockBackResist = 0f;
+			NPC.npcSlots = 0;
             NPC.immortal = true;
             NPC.dontTakeDamage = true;
             NPC.noTileCollide = true;
             NPC.noGravity = true;
+			NPC.dontCountMe = true;
             NPC.alpha = 255;
             NPC.aiStyle = -1;
         }
@@ -40,7 +39,12 @@ namespace Spooky.Content.NPCs.Catacomb.Layer2
             return false;
         }
 
-        public override void AI()
+		public static bool SolidTile(int i, int j)
+		{
+			return Framing.GetTileSafely(i, j).HasTile && Main.tileSolid[Framing.GetTileSafely(i, j).TileType];
+		}
+
+		public override void AI()
         {
             NPC.TargetClosest(true);
             Player player = Main.player[NPC.target];
@@ -48,52 +52,19 @@ namespace Spooky.Content.NPCs.Catacomb.Layer2
             switch ((int)NPC.ai[0])
             {
                 //fly upward until it hits a valid ceiling 
-                case 0: 
-                {
-                    NPC.velocity.Y = -10;
+                case 0:
+				{
+					NPC.ai[1]++;
 
-                    NPC.ai[1]++;
+					if (NPC.ai[1] == 1)
+					{
+						NPC.velocity.Y -= 10;
+					}
 
-                    if (NPC.ai[1] > 5)
-                    {
-                        //automatically kill the spawner if it hits a platform to prevent the crusher from getting stuck
-                        int minTilePosX = (int)(NPC.position.X / 16.0) - 1;
-                        int maxTilePosX = (int)((NPC.position.X + NPC.width) / 16.0) + 2;
-                        int minTilePosY = (int)(NPC.position.Y / 16.0) - 1;
-                        int maxTilePosY = (int)((NPC.position.Y + NPC.height) / 16.0) + 2;
-                        if (minTilePosX < 0)
-                        {
-                            minTilePosX = 0;
-                        }
-                        if (maxTilePosX > Main.maxTilesX)
-                        {
-                            maxTilePosX = Main.maxTilesX;
-                        }
-                        if (minTilePosY < 0)
-                        {
-                            minTilePosY = 0;
-                        }
-                        if (maxTilePosY > Main.maxTilesY)
-                        {
-                            maxTilePosY = Main.maxTilesY;
-                        }
-
-                        for (int i = minTilePosX; i < maxTilePosX; ++i)
-                        {
-                            for (int j = minTilePosY; j < maxTilePosY; ++j)
-                            {
-                                if (Main.tile[i, j] != null && TileID.Sets.Platforms[Main.tile[i, j].TileType])
-                                {
-                                    NPC.active = false;
-                                }
-                            }
-                        }
-
-                        if (Collision.SolidCollision(NPC.Center, NPC.width, NPC.height))
-                        {
-                            NPC.ai[0]++;
-                        }
-                    }
+					if (NPC.ai[1] > 5 && IsColliding())
+					{
+						NPC.ai[0]++;
+					}
 
                     break;
                 }
@@ -101,12 +72,12 @@ namespace Spooky.Content.NPCs.Catacomb.Layer2
                 //spawn the crusher once the ceiling is found
                 case 1: 
                 {
-                    if (NPC.ai[1] < 22)
+                    if (NPC.ai[1] < 15)
                     {
                         NPC.active = false;
                     }
 
-                    if (NPC.ai[1] >= 22)
+                    if (NPC.ai[1] >= 15)
                     {
                         if (Main.rand.NextBool(10))
                         {
@@ -138,5 +109,51 @@ namespace Spooky.Content.NPCs.Catacomb.Layer2
                 }
             }
         }
-    }
+
+		public bool IsColliding()
+		{
+			int minTilePosX = (int)(NPC.position.X / 16) - 1;
+			int maxTilePosX = (int)((NPC.position.X + NPC.width) / 16) + 2;
+			int minTilePosY = (int)(NPC.position.Y / 16) - 1;
+			int maxTilePosY = (int)((NPC.position.Y + NPC.height) / 16) + 2;
+			if (minTilePosX < 0)
+			{
+				minTilePosX = 0;
+			}
+			if (maxTilePosX > Main.maxTilesX)
+			{
+				maxTilePosX = Main.maxTilesX;
+			}
+			if (minTilePosY < 0)
+			{
+				minTilePosY = 0;
+			}
+			if (maxTilePosY > Main.maxTilesY)
+			{
+				maxTilePosY = Main.maxTilesY;
+			}
+
+			for (int i = minTilePosX; i < maxTilePosX; ++i)
+			{
+				for (int j = minTilePosY; j < maxTilePosY; ++j)
+				{
+					if (Main.tile[i, j] != null && Main.tile[i, j].HasTile && !Main.tile[i, j].IsActuated &&
+					Main.tileSolid[(int)Main.tile[i, j].TileType] && !TileID.Sets.Platforms[(int)Main.tile[i, j].TileType])
+					{
+						Vector2 vector2;
+						vector2.X = (float)(i * 16);
+						vector2.Y = (float)(j * 16);
+
+						if (NPC.position.X + NPC.width > vector2.X && NPC.position.X < vector2.X + 16.0 &&
+						(NPC.position.Y + NPC.height > (double)vector2.Y && NPC.position.Y < vector2.Y + 16.0))
+						{
+							return true;
+						}
+					}
+				}
+			}
+
+			return false;
+		}
+	}
 }
